--- a/Students.html
+++ b/Students.html
@@ -26,22 +26,16 @@
 <div id="toptitle">
 <h1>Amjad Seyedi</h1>
 </div>
-<h2>Advisees</h2>
+<h2>Current students</h2>
+<h3>Advisees</h3>
 <table id="TABLENAME">
 <tr class="r1"><td class="c1"><b>Masters</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r4"><td class="c1">Sarina Khaledian </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2022-Present</td><td class="c4"> <b>popularity bias, diversity, and fairness in recommendation</b> </td></tr>
-<tr class="r5"><td class="c1"><a href="https://scholar.google.com/citations?user=8uql40MAAAAJ&amp;hl=en">Sayvan Soleymanbeigi</a> </td><td class="c2"> (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) </td><td class="c3"> 2022-2024</td><td class="c4"> <b>topic modeling, text clustering</b> </td></tr>
-<tr class="r6"><td class="c1"><a href="https://scholar.google.com/citations?user=-1AZPGkAAAAJ&hl=en">Arina Mohammadi</a> </td><td class="c2"> (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>attributed graph clustering</b> </td></tr>
-<tr class="r7"><td class="c1">Setare Mohammadi </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>robust representation learning</b> </td></tr>
-<tr class="r8"><td class="c1"><a href="https://scholar.google.com/citations?user=S8QF7LMAAAAJ&amp;hl=en">Mohammad Faraji</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>multi-label feature selection</b> </td></tr>
-<tr class="r9"><td class="c1"><a href="https://scholar.google.com/citations?user=0VjfV-YAAAAJ&amp;hl=en">Akram Hajiveiseh</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2023</td><td class="c4"> <b>directed graph clustering</b> </td></tr>
-<tr class="r10"><td class="c1"><a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ&amp;hl=en">Reza Mahmoodi</a> </td><td class="c2"> (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>link prediction</b> </td></tr>
-<tr class="r11"><td class="c1"><a href="https://scholar.google.com/citations?user=ANttTRIAAAAJ&amp;hl=en">Jovan Chavoshinejad</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>self-supervised/semi-supervised learning</b> </td></tr>
-<tr class="r12"><td class="c1"><a href="https://scholar.google.com/citations?user=a_Q67kIAAAAJ&amp;hl=en">Navid Salahian</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>unsupervised representation learning</b> 
+<tr class="r4"><td class="c1">Sarina Khaledian</td><td class="c2"> </td><td class="c3"> (Supervisor: Dr. Akhlaghian) </td><td class="c4"> </td><td class="c5"> </td><td class="c6"> </td><td class="c7"> </td><td class="c8"> </td><td class="c9"> </td><td class="c10"> </td><td class="c11"> </td><td class="c12"> </td><td class="c13"> </td><td class="c14"> </td><td class="c15"> </td><td class="c16"> 2022-Present</td><td class="c17"> <b>popularity bias, diversity, and fairness in recommendation</b> </td></tr>
+<tr class="r5"><td class="c1">
 </td></tr></table>
-<h2>Mentees</h2>
+<h3>Mentees</h3>
 <table id="TABLENAME">
 <tr class="r1"><td class="c1"><b>PhDs</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
@@ -54,33 +48,35 @@
 <tr class="r9"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r10"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r11"><td class="c1">Negin Jabbari</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Reza Mahmoodi) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>multi-view representation</b> </td></tr>
-<tr class="r12"><td class="c1">Zahra Mohseni Rad</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>hyperspectral unmixing</b> </td></tr>
+<tr class="r12"><td class="c1">Zahra Mohseni Rad </td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>hyperspectral unmixing</b> </td></tr>
 <tr class="r13"><td class="c1">Shirin Moradi</td><td class="c2"> (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) </td><td class="c3"> 2023-Present</td><td class="c4"> <b>anomaly detection in hyperspectral images</b> </td></tr>
-<tr class="r14"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> (Supervisor: Dr. Pir Mohammadiani - Advisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>unsupervised feature selection</b> </td></tr>
-<tr class="r15"><td class="c1">Negar Hadipour</td><td class="c2"> (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) </td><td class="c3"> 2017-2019</td><td class="c4"> <b>semi-supervised learning</b> 
+<tr class="r14"><td class="c1">
+</td></tr></table>
+<h2>Alumni</h2>
+<h3>Advisees</h3>
+<table id="TABLENAME">
+<tr class="r1"><td class="c1"><b>Masters</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?user=8uql40MAAAAJ&amp;hl=en">Sayvan Soleymanbeigi</a> </td><td class="c2"> (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) </td><td class="c3"> 2022-2024</td><td class="c4"> <b>topic modeling, text clustering</b> </td></tr>
+<tr class="r5"><td class="c1"><a href="https://scholar.google.com/citations?user=-1AZPGkAAAAJ&amp;hl=en">Arina Mohammadi</a> </td><td class="c2"> (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>attributed graph clustering</b> </td></tr>
+<tr class="r6"><td class="c1">Setare Mohammadi </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>robust representation learning</b> </td></tr>
+<tr class="r7"><td class="c1"><a href="https://scholar.google.com/citations?user=S8QF7LMAAAAJ&amp;hl=en">Mohammad Faraji</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2021-2023</td><td class="c4"> <b>multi-label feature selection</b> </td></tr>
+<tr class="r8"><td class="c1"><a href="https://scholar.google.com/citations?user=0VjfV-YAAAAJ&amp;hl=en">Akram Hajiveiseh</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2023</td><td class="c4"> <b>directed graph clustering</b> </td></tr>
+<tr class="r9"><td class="c1"><a href="https://scholar.google.com/citations?user=d8-bxRMAAAAJ&amp;hl=en">Reza Mahmoodi</a> </td><td class="c2"> (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) </td><td class="c3"> 2021-2022</td><td class="c4"> <b>link prediction</b> </td></tr>
+<tr class="r10"><td class="c1"><a href="https://scholar.google.com/citations?user=ANttTRIAAAAJ&amp;hl=en">Jovan Chavoshinejad</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>self-supervised/semi-supervised learning</b> </td></tr>
+<tr class="r11"><td class="c1"><a href="https://scholar.google.com/citations?user=a_Q67kIAAAAJ&amp;hl=en">Navid Salahian</a> </td><td class="c2"> (Supervisor: Dr. Akhlaghian) </td><td class="c3"> 2020-2022</td><td class="c4"> <b>unsupervised representation learning</b> 
+</td></tr></table>
+<h3>Mentees</h3>
+<table id="TABLENAME">
+<tr class="r1"><td class="c1"><b>Masters</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
+<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> </td><td class="c3"> </td><td class="c4">  (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c5"> 2021-2022</td><td class="c6"> <b>unsupervised feature selection</b> </td><td class="c7"> PhD student at the University of Quebec in Outaouais </td></tr>
+<tr class="r5"><td class="c1">Negar Hadipour</td><td class="c2"> </td><td class="c3"> </td><td class="c4"> (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) </td><td class="c5">  2017-2019</td><td class="c6"> <b>semi-supervised learning</b> 
 </td></tr></table>
 </td>
 </tr>
 </table>
 </body>
-
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
-  
 </html>
