--- a/Services.html
+++ b/Services.html
@@ -39,6 +39,8 @@
 </li>
 <li><p>Engineering Applications of Artificial Intelligence</p>
 </li>
+<li><p>International Journal of Machine Learning and Cybernetics</p>
+</li>
 <li><p>Mathematics</p>
 </li>
 <li><p>Computers and Electrical Engineering</p>
@@ -55,23 +57,4 @@
 </tr>
 </table>
 </body>
-
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
 </html>
