--- a/Publications.html
+++ b/Publications.html
@@ -27,12 +27,21 @@
 <h1>Amjad Seyedi</h1>
 </div>
 <h2>Publications </h2>
+<h3>Preprints</h3>
+<ul>
+<li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian.</p>
+</li>
+<li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar.</p>
+</li>
+</ul>
 <h3>2024</h3>
 <ul>
-<li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
+<li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">"A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions"</a>
 <br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2024.</p>
 </li>
-<li><p><a href="https://doi.org/10.1016/j.asoc.2024.112012">Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</a>
+<li><p><a href="https://doi.org/10.1016/j.asoc.2024.112012">"Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering"</a>
 <br /> A. Mohammadi, <b>A. Seyedi</b>, F. Akhlaghian, and R. Pir Mohammadiani, Applied Soft Computing 2024.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.engappai.2024.108641">Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</a>
@@ -100,24 +109,5 @@
 </td>
 </tr>
 </table>
-
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
 </body>
 </html>
