--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h2>News</h2>
 <ul>
-<li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, September 11-12, 2025, in Mons.</b></p>
+<li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-<li><p>I will deliver a speech on Matrix Factorization for Machine Learning, February 20, 2025, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium.</p>
+<li><p>I will deliver a speech on Matrix Factorization for Machine Learning, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, October 29, 2024, UCLouvain, Belgium.</p>
+<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles course (lecturer: Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
-<li><p>I will attend the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, October 9-11, 2024, Trier University, Germany.</p>
+<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, August 27-30, 2024, UCLouvain, Belgium.</p>
+<li><p>I will attend the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
+</li>
+<li><p>I will attend the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
 </li>
 <li><p>My poster is accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
 </li>
@@ -70,24 +72,5 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </td>
 </tr>
 </table>
-  
-<!-- Default Statcounter code for Seyedi
-https://amjadseyedi@github.io -->
-<script type="text/javascript">
-var sc_project=12494759; 
-var sc_invisible=1; 
-var sc_security="06ce839b"; 
-</script>
-<script type="text/javascript"
-src="https://www.statcounter.com/counter/counter.js"
-async></script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="https://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-alt="Web Analytics"
-referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-<!-- End of Statcounter Code -->
-  
 </body>
 </html>
