--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles course (lecturer: Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
+<li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
 </li>
-<li><p>I will attend the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
+<li><p style="text-decoration: line-through">I will attend the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
+<li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
 </li>
-<li><p>My poster is accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
+<li><p style="text-decoration: line-through">My poster is accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
 </li>
 <li><p>I started my PhD in <a href="https://sites.google.com/site/nicolasgillis/team-members">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024.</p>
 </li>
