--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-<li><p>I will deliver a speech on Matrix Factorization for Machine Learning, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
+<li><p>I will deliver a speech on Deep Matrix Factorizations for Data Representation, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
 <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles</a> course (lecturer: <a href=https://www.di.ens.fr/~fbach/>Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
