--- a/Services.html
+++ b/Services.html
@@ -29,7 +29,7 @@
 <h2>Services</h2>
 <h4>Reviewer for multiple journals</h4>
 <ul>
-<li><p>IEEE Transactions on Neural Networks and Learning Systems</p>
+<li><p>Pattern Recognition</p>
 </li>
 <li><p>Artificial Intelligence Review</p>
 </li>
@@ -50,7 +50,7 @@
 </ul>
 <h4>Speech</h4>
 <ul>
-<li><p><b>Matrix Factorization for Machine Learning</b>, Feb 20 2025, Dynamical Systems, STADIUS Center for Signal Processing and Data Analysis, KU Leuven, belgium. </p>
+<li><p><b>Deep Matrix Factorizations for Data Representation</b>, Feb 20 2025, STADIUS Center, KU Leuven, belgium. </p>
 </li>
 </ul>
 </td>
