--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
   <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles</a> course (lecturer: <a href=https://www.di.ens.fr/~fbach/>Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
+  <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: Graphs, Data and AI (Prof. Jure Leskovec)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
+</li>
 <li><p>I will deliver a speech on Deep Matrix Factorizations for Data Representation, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
 <li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
