--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-  <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles</a> course (lecturer: <a href=https://www.di.ens.fr/~fbach/>Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
+  <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles</a> course (lecturer: <a href=https://www.di.ens.fr/~fbach/>Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
-  <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: Graphs, Data and AI (Prof. Jure Leskovec)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
+  <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: Graphs, Data and AI (<a href=https://cs.stanford.edu/people/jure>Prof. Jure Leskovec</a>)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
 </li>
 <li><p>I will deliver a speech on Deep Matrix Factorizations for Data Representation, <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
