--- a/Publications.html
+++ b/Publications.html
@@ -29,6 +29,9 @@
 <h2>Publications </h2>
 <h3>Preprints</h3>
 <ul>
+<li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian.</p>
+</li>
 <li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian.</p>
 </li>
