--- a/Publications.html
+++ b/Publications.html
@@ -30,13 +30,13 @@
 <h3>Preprints</h3>
 <ul>
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
-<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, <a href="First">revision</a>.</p>
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [First revision].</p>
 </li>
 <li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
-<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, <a href="First">revision</a>.</p>
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, [First revision].</p>
 </li>
 <li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
-<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, <a href="First">revision</a>.</p>
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, [First revision].</p>
 </li>
 </ul>
 <h3>2024</h3>
