--- a/Students.html
+++ b/Students.html
@@ -72,7 +72,7 @@
 <tr class="r1"><td class="c1"><b>Masters</b> </td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r2"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
 <tr class="r3"><td class="c1"></td><td class="c2"> </td><td class="c3"> </td></tr>
-<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> </td><td class="c3"> </td><td class="c4">  (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) </td><td class="c5"> 2021-2022</td><td class="c6"> <b>unsupervised feature selection</b> </td><td class="c7"> PhD student at the University of Quebec in Outaouais </td></tr>
+<tr class="r4"><td class="c1"><a href="https://scholar.google.com/citations?user=jIh78k8AAAAJ&amp;hl=en">Maryam Mozafari</a></td><td class="c2"> </td><td class="c3"> </td><td class="c4">  (Supervisor: Dr. Pir Mohammadiani - Advisor: Dr. Akhlaghian) </td><td class="c5"> 2021-2022</td><td class="c6"> <b>unsupervised feature selection</b> </td><td class="c7"> PhD student at the University of Quebec in Outaouais </td></tr>
 <tr class="r5"><td class="c1">Negar Hadipour</td><td class="c2"> </td><td class="c3"> </td><td class="c4"> (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) </td><td class="c5">  2017-2019</td><td class="c6"> <b>semi-supervised learning</b> 
 </td></tr></table>
 </td>
