--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
   <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: Graphs, Data and AI (<a href=https://cs.stanford.edu/people/jure>Prof. Jure Leskovec</a>)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
 </li>
-<li><p style="text-decoration: line-through">I will deliver a speech on "<a href=https://amjadseyedi.github.io/DeepNMFs.pdf">Deep Matrix Factorizations for Data Representation</a>", <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
+<li><p style="text-decoration: line-through">I will deliver a speech on "<a href=https://amjadseyedi.github.io/DeepNMFs.pdf>Deep Matrix Factorizations for Data Representation</a>", <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
 <li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
 </li>
