--- a/index.html
+++ b/index.html
@@ -51,22 +51,26 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 </ul>
 <h2>News</h2>
+<h3>Upcoming</h3>
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-  <li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">SOCN Learning theory from first principles</a> course (lecturer: <a href=https://www.di.ens.fr/~fbach/>Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
+<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">&ldquo;Learning Theory from First Principles&rdquo; course (Prof. Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
-  <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: Graphs, Data and AI (<a href=https://cs.stanford.edu/people/jure>Prof. Jure Leskovec</a>)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
+<li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo; (Prof. Jure Leskovec)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
 </li>
-<li><p style="text-decoration: line-through">I will deliver a speech on "<a href=https://amjadseyedi.github.io/DeepNMFs.pdf>Deep Matrix Factorizations for Data Representation</a>", <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
+</ul>
+<h3>Recent news</h3>
+<ul>
+<li><p>I delivered a speech on <a href="https://amjadseyedi.github.io/DeepNMFs.pdf">Deep Matrix Factorizations for Data Representation</a> at the <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
-<li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
+<li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
 </li>
-<li><p style="text-decoration: line-through">I will attend the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
+<li><p>I attended the <a href="https://alop.uni-trier.de/event/autumn-school-on-constrained-optimization-and-machine-learning/">Autumn School on Constrained Optimization and Machine Learning</a>, Trier University, Germany, October 9-11, 2024.</p>
 </li>
-<li><p style="text-decoration: line-through">I will attend the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
+<li><p>I attended the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>, UCLouvain, Belgium, August 27-30, 2024.</p>
 </li>
-<li><p style="text-decoration: line-through">My poster is accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
+<li><p>My poster was accepted for presentation at the <a href="https://sites.uclouvain.be/algopt2024/">ALGOPT2024 Workshop on Algorithmic Optimization: Tools for AI and Data Science</a>.</p>
 </li>
 <li><p>I started my PhD in <a href="https://sites.google.com/site/nicolasgillis/team-members">Matrix Theory and Optimization</a> at Polytech MONS, University of Mons, Belgium, June 18, 2024.</p>
 </li>
