--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">&ldquo;Learning Theory from First Principles&rdquo; course (Prof. Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
+<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">&ldquo; SOCN course: Learning Theory from First Principles&rdquo; course (Prof. Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
 <li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo; (Prof. Jure Leskovec)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
 </li>
