--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-<li><p>I will attend the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">&ldquo; SOCN course: Learning Theory from First Principles&rdquo; course (Prof. Francis Bach)</a>, KU Leuven, Belgium, April 1-3, 2025.</p>
+<li><p>I will attend the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
-<li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo; (Prof. Jure Leskovec)</a>, University of Antwerp, Belgium, March 20, 2025.</p>
+<li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.</p>
 </li>
 </ul>
 <h3>Recent news</h3>
@@ -78,6 +78,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </td>
 </tr>
 </table>
+
 <!-- core  -->
         <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
         <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
@@ -104,5 +105,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
                 alt="Web Analytics"></a></div>
         </noscript>
         <!-- End of Statcounter Code -->
+
 </body>
 </html>
