--- a/Publications.html
+++ b/Publications.html
@@ -39,11 +39,14 @@
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, [First revision].</p>
 </li>
 </ul>
-<h3>2024</h3>
+<h3>2025</h3>
 <ul>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">"A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions"</a>
-<br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2024.</p>
+<br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2025.</p>
 </li>
+</ul>
+<h3>2024</h3>
+<ul>
 <li><p><a href="https://doi.org/10.1016/j.asoc.2024.112012">"Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering"</a>
 <br /> A. Mohammadi, <b>A. Seyedi</b>, F. Akhlaghian, and R. Pir Mohammadiani, Applied Soft Computing 2024.</p>
 </li>
@@ -112,5 +115,33 @@
 </td>
 </tr>
 </table>
+
+<!-- core  -->
+        <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+        <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+        <!-- bootstrap 3 affix -->
+        <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+        <!-- Owl carousel  -->
+        <script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
+        <!-- Ollie js -->
+        <script src="assets/js/Ollie.js"></script>
+        <!-- Statcounter -->
+        <script type="text/javascript">
+            var sc_project=12494759; 
+            var sc_invisible=1; 
+            var sc_security="06ce839b"; 
+        </script>
+        <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js"
+            async></script>
+        <noscript>
+            <div class="statcounter"><a title="Web Analytics"
+                href="https://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="https://c.statcounter.com/12494759/0/06ce839b/1/"
+                alt="Web Analytics"></a></div>
+        </noscript>
+        <!-- End of Statcounter Code -->
+
 </body>
 </html>
