--- a/Services.html
+++ b/Services.html
@@ -29,6 +29,8 @@
 <h2>Services</h2>
 <h4>Reviewer for multiple journals</h4>
 <ul>
+<li><p>Information Fusion</p>
+</li>
 <li><p>Pattern Recognition</p>
 </li>
 <li><p>Artificial Intelligence Review</p>
@@ -56,5 +58,33 @@
 </td>
 </tr>
 </table>
+
+<!-- core  -->
+        <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+        <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+        <!-- bootstrap 3 affix -->
+        <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+        <!-- Owl carousel  -->
+        <script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
+        <!-- Ollie js -->
+        <script src="assets/js/Ollie.js"></script>
+        <!-- Statcounter -->
+        <script type="text/javascript">
+            var sc_project=12494759; 
+            var sc_invisible=1; 
+            var sc_security="06ce839b"; 
+        </script>
+        <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js"
+            async></script>
+        <noscript>
+            <div class="statcounter"><a title="Web Analytics"
+                href="https://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="https://c.statcounter.com/12494759/0/06ce839b/1/"
+                alt="Web Analytics"></a></div>
+        </noscript>
+        <!-- End of Statcounter Code -->
+
 </body>
 </html>
