--- a/index.html
+++ b/index.html
@@ -55,13 +55,17 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
 </li>
-<li><p>I will attend the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
+<li><p>I will be giving a talk titled &ldquo;Instance-wise Distributionally Robust NMF&rdquo; at the <a href="https://europt2025.org/">22nd Conference on Advances in Continuous Optimization (EUROPT 2025)</a>, at the University of Southampton, UK, June 29 - July 2, 2025.</p>
 </li>
-<li><p>I will attend the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.</p>
+<li><p>I will attend the &ldquo;<a href="https://www.euro-online.org/websites/continuous-optimization/europtschool25/">Distributionally Robust Optimization</a>&rdquo; EUROPT Summer School (<a href="https://scholar.google.com/citations?user=RqnXytkAAAAJ&amp;hl=en">Prof. Daniel Kuhn</a>), at the University of Southampton, UK, June 27, 2025.</p>
+</li>
+<li><p>I will attend the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>I attended the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.</p>
+</li>
 <li><p>I delivered a speech on <a href="https://amjadseyedi.github.io/DeepNMFs.pdf">Deep Matrix Factorizations for Data Representation</a> at the <a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center, KU Leuven</a>, Belgium, February 20, 2025.</p>
 </li>
 <li><p>I attended the <a href="https://sites.uclouvain.be/socn/drupal/socn/node/393">Graduate School in Systems, Optimization, Control and Networks (SOCN) Study Day</a>, UCLouvain, Belgium, October 29, 2024.</p>
