--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</p>
 </li>
-<li><p><b>Applications:</b> remote sensing, recommendation, healthcare</p>
+<li><p><b>Applications:</b> healthcare, remote sensing, recommendation</p>
 </li>
 </ul>
 <h2>News</h2>
