--- a/Publications.html
+++ b/Publications.html
@@ -32,15 +32,15 @@
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [First revision].</p>
 </li>
-<li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
-<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, [First revision].</p>
-</li>
 <li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, [First revision].</p>
 </li>
 </ul>
 <h3>2025</h3>
 <ul>
+<li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2025.</p>
+</li>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">"A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions"</a>
 <br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2025.</p>
 </li>
