--- a/Publications.html
+++ b/Publications.html
@@ -41,13 +41,13 @@
 <li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2025.</p>
 </li>
-<li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">"A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions"</a>
+<li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
 <br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2025.</p>
 </li>
 </ul>
 <h3>2024</h3>
 <ul>
-<li><p><a href="https://doi.org/10.1016/j.asoc.2024.112012">"Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering"</a>
+<li><p><a href="https://doi.org/10.1016/j.asoc.2024.112012">Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</a>
 <br /> A. Mohammadi, <b>A. Seyedi</b>, F. Akhlaghian, and R. Pir Mohammadiani, Applied Soft Computing 2024.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.engappai.2024.108641">Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</a>
