--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</p>
 </li>
-<li><p><b>Applications:</b> healthcare, remote sensing, recommendation</p>
+<li><p><b>Applications:</b> remote sensing, recommendation, healthcare</p>
 </li>
 </ul>
 <h2>News</h2>
@@ -62,6 +62,8 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>Our paper, Instance-wise Distributionally Robust NMF, has been accepted for publication in Pattern Recognition journal. It's my first collaboration with Prof. Nicolas Gillis.</p>
+</li>
 <li><p>I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
 <li><p>I attended the <a href="https://www.uantwerpen.be/en/about-uantwerp/faculties/faculty-of-science/news-and-calendar/special-events/honorary-degree-2025/">Masterclass: &ldquo;Graphs, Data and AI&rdquo;</a> (<a href="https://cs.stanford.edu/~jure">Prof. Jure Leskovec</a>), University of Antwerp, Belgium, March 20, 2025.</p>
@@ -82,7 +84,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </td>
 </tr>
 </table>
-
 
 <!-- core  -->
         <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
@@ -110,7 +111,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
                 alt="Web Analytics"></a></div>
         </noscript>
         <!-- End of Statcounter Code -->
-
 
 </body>
 </html>
