--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 Rue de Houdain 9, 7000 Mons, Belgium <br /> 
 Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://scholar.google.com/citations?user=gRU1aPYAAAAJ&amp;hl=en">Google Scholar</a>&nbsp;&nbsp;&nbsp;
+<a href="https://www.scopus.com/authid/detail.uri?authorId=57193125657">Scopus</a>&nbsp;&nbsp;&nbsp;
 <a href="https://github.com/amjadseyedi">GitHub</a>&nbsp;&nbsp;&nbsp;
 <a href="https://www.linkedin.com/in/AmjadSeyedi/">LinkedIn</a></p>
 </td></tr></table>
@@ -47,7 +48,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</p>
 </li>
-<li><p><b>Applications:</b> remote sensing, recommendation, healthcare</p>
+<li><p><b>Applications:</b> remote sensing, healthcare, recommendation</p>
 </li>
 </ul>
 <h2>News</h2>
