--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </ul>
 <h3>Recent news</h3>
 <ul>
-<li><p>Our paper, Instance-wise Distributionally Robust NMF, has been accepted for publication in Pattern Recognition journal. It's my first collaboration with Prof. Nicolas Gillis.</p>
+<li><p>Our paper, <a href=https://doi.org/10.1016/j.patcog.2025.111732>Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in the Pattern Recognition journal. It's my first collaboration with Prof. Nicolas Gillis.</p>
 </li>
 <li><p>I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
