--- a/Publications.html
+++ b/Publications.html
@@ -38,7 +38,7 @@
 </ul>
 <h3>2025</h3>
 <ul>
-<li><p>Instance-wise Distributionally Robust Nonnegative Matrix Factorization
+<li><p><a href=https://doi.org/10.1016/j.patcog.2025.111732>Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2025.</p>
 </li>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
