--- a/Publications.html
+++ b/Publications.html
@@ -36,11 +36,14 @@
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, [First revision].</p>
 </li>
 </ul>
+<h3>2026</h3>
+<ul>
+<li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
+<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2026.</p>
+</li>
+</ul>
 <h3>2025</h3>
 <ul>
-<li><p><a href=https://doi.org/10.1016/j.patcog.2025.111732>Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
-<br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2025.</p>
-</li>
 <li><p><a href="https://doi.org/10.1007/s00521-024-10370-4">A New Bi-Level Deep Human Action Representation Structure based on the Sequence of Sub-Actions</a>
 <br /> F. Akhlaghian, M. Ramezani, H. Afshoon, <b>A. Seyedi</b>, and A. Moradyani, Neural Computing and Applications 2025.</p>
 </li>
