--- a/Services.html
+++ b/Services.html
@@ -37,9 +37,13 @@
 </li>
 <li><p>Knowledge-Based Systems</p>
 </li>
-<li><p>Digital Signal Processing</p>
+<li><p>Expert Systems with Applications</p>
+</li>
+<li><p>Information Processing &amp; Management</p>
 </li>
 <li><p>Engineering Applications of Artificial Intelligence</p>
+</li>
+<li><p>Digital Signal Processing</p>
 </li>
 <li><p>International Journal of Machine Learning and Cybernetics</p>
 </li>
