--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <a href="https://www.linkedin.com/in/AmjadSeyedi/">LinkedIn</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am currently pursuing a PhD in Matrix Theory and Optimization at the <a href="https://web.umons.ac.be/en/">University of Mons</a> under the supervision of <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. Previously, as a graduate research assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, I worked on representation learning with a focus on robustness and generalization. I also led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a>, a group that explores fundamental methods in unsupervised machine learning. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> and <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, multi-label classification, and recommendation systems. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
+<p>I am currently a Doctoral Researcher in Matrix Theory and Optimization at the <a href="https://web.umons.ac.be/en/">University of Mons</a> under the supervision of <a href="https://sites.google.com/site/nicolasgillis">Prof. Nicolas Gillis</a>. Previously, as a graduate research assistant at the <a href="https://uok.ac.ir/en/">University of Kurdistan</a>, I worked on representation learning with a focus on robustness and generalization. I also led the <a href="https://amlteams.github.io/">Algebraic Machine Learning (AML) team</a>, a group that explores fundamental methods in unsupervised machine learning. I have a Master’s degree in Artificial Intelligence from the same university, where I worked with <a href="https://scholar.google.com/citations?user=BQl2nKsAAAAJ">Dr. Fardin Akhlaghian</a> and <a href="https://scholar.google.com/citations?user=bR5ttrwAAAAJ">Dr. Parham Moradi</a> on matrix factorization and low-rank approximation for various applications such as semi-supervised learning, multi-label classification, and recommendation systems. I also have an Associate and a Bachelor’s degree in Software Engineering.</p>
 <h2>Research interests</h2>
 <ul>
 <li><p><b>Math:</b> linear algebra, numerical analysis, optimization</p>
@@ -48,22 +48,22 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </li>
 <li><p><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</p>
 </li>
-<li><p><b>Applications:</b> healthcare, remote sensing, recommendation</p>
+<li><p><b>Applications:</b> healthcare, remote sensing, recommendation </p>
 </li>
 </ul>
 <h2>News</h2>
 <h3>Upcoming</h3>
 <ul>
-<li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
-<!-- </li>
-<li><p>I will be giving a talk titled &ldquo;Instance-wise Distributionally Robust NMF&rdquo; at the <a href="https://europt2025.org/">22nd Conference on Advances in Continuous Optimization (EUROPT 2025)</a>, at the University of Southampton, UK, June 29 - July 2, 2025.</p>
+<li><p>I will attend the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.</p>
 </li>
-<li><p>I will attend the &ldquo;<a href="https://www.euro-online.org/websites/continuous-optimization/europtschool25/">Distributionally Robust Optimization</a>&rdquo; EUROPT Summer School (<a href="https://scholar.google.com/citations?user=RqnXytkAAAAJ&amp;hl=en">Prof. Daniel Kuhn</a>), at the University of Southampton, UK, June 27-28, 2025.</p>
-</li> -->
+<li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
+</li>
+<li><p>I will attend the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.</p>
+</li>
 </ul>
 <h3>Recent news</h3>
 <ul>
-<li><p>Our paper, <a href=https://doi.org/10.1016/j.patcog.2025.111732>Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in the Pattern Recognition journal. It's my first collaboration with Prof. Nicolas Gillis.</p>
+<li><p>Our paper, Instance-wise Distributionally Robust NMF, has been accepted for publication in Pattern Recognition journal. It's my first collaboration with Prof. Nicolas Gillis.</p>
 </li>
 <li><p>I attended the &ldquo;<a href="https://sites.uclouvain.be/socn/drupal/socn/node/423">Learning Theory from First Principles</a>&rdquo; course (<a href="https://www.di.ens.fr/~fbach">Prof. Francis Bach</a>), KU Leuven, Belgium, April 1-3, 2025.</p>
 </li>
@@ -86,32 +86,33 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 </tr>
 </table>
 
+
 <!-- core  -->
-        <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-        <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-        <!-- bootstrap 3 affix -->
-        <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-        <!-- Owl carousel  -->
-        <script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
-        <!-- Ollie js -->
-        <script src="assets/js/Ollie.js"></script>
-        <!-- Statcounter -->
-        <script type="text/javascript">
-            var sc_project=12494759; 
-            var sc_invisible=1; 
-            var sc_security="06ce839b"; 
-        </script>
-        <script type="text/javascript"
-            src="https://www.statcounter.com/counter/counter.js"
-            async></script>
-        <noscript>
-            <div class="statcounter"><a title="Web Analytics"
-                href="https://statcounter.com/" target="_blank"><img
-                class="statcounter"
-                src="https://c.statcounter.com/12494759/0/06ce839b/1/"
-                alt="Web Analytics"></a></div>
-        </noscript>
-        <!-- End of Statcounter Code -->
+	<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+	<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+	<!-- bootstrap 3 affix -->
+	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+	<!-- Owl carousel  -->
+	<script src="assets/vendors/owl-carousel/js/owl.carousel.js"></script>
+	<!-- Ollie js -->
+	<script src="assets/js/Ollie.js"></script>
+	<!-- Statcounter -->
+	<script type="text/javascript">
+		var sc_project=12494759; 
+		var sc_invisible=1; 
+		var sc_security="06ce839b"; 
+	</script>
+	<script type="text/javascript"
+		src="https://www.statcounter.com/counter/counter.js"
+		async></script>
+	<noscript>
+		<div class="statcounter"><a title="Web Analytics"
+			href="https://statcounter.com/" target="_blank"><img
+			class="statcounter"
+			src="https://c.statcounter.com/12494759/0/06ce839b/1/"
+			alt="Web Analytics"></a></div>
+	</noscript>
+<!-- End of Statcounter Code -->
 
 </body>
 </html>
