--- a/Publications.html
+++ b/Publications.html
@@ -31,13 +31,12 @@
 <ul>
 <li><p>Semantic Encoder-Decoder Nonnegative Matrix Factorization with Kullback-Leibler Divergence
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Daneshfar, and F. Akhlaghian, [First revision].</p>
-</li>
-<li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
-<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, [First revision].</p>
-</li>
 </ul>
 <h3>2026</h3>
 <ul>
+<li><p>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence
+<br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
+</li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
 <br /> W. Barkhoda, <b>A. Seyedi</b>, N. Gillis, and F. Akhlaghian, Pattern Recognition 2026.</p>
 </li>
