--- a/Services.html
+++ b/Services.html
@@ -43,6 +43,8 @@
 </li>
 <li><p>Engineering Applications of Artificial Intelligence</p>
 </li>
+<li><p>Scientific Reports</p>
+</li>
 <li><p>Digital Signal Processing</p>
 </li>
 <li><p>International Journal of Machine Learning and Cybernetics</p>
@@ -92,3 +94,4 @@
 
 </body>
 </html>
+
