--- a/Services.html
+++ b/Services.html
@@ -58,7 +58,7 @@
 </ul>
 <h4>Speech</h4>
 <ul>
-<li><p><b>Deep Matrix Factorizations for Data Representation</b>, Feb 20 2025, STADIUS Center, KU Leuven, belgium. </p>
+<li><p><b>Deep Matrix Factorizations for Data Representation</b>, Feb 20 2025, STADIUS Center, KU Leuven, Belgium. </p>
 </li>
 </ul>
 </td>
@@ -94,4 +94,5 @@
 
 </body>
 </html>
+
 
