--- a/Publications.html
+++ b/Publications.html
@@ -34,7 +34,8 @@
 </ul>
 <h3>2026</h3>
 <ul>
-<li><p><a href=https://doi.org/10.1016/j.patcog.2025.112211>Data Clustering by Encoder-Decoder Nonnegative Matrix Factorization with β-Divergence</a>
+<li><p><a href=https://doi.org/10.1016/j.patcog.2025.112211>Encoder-Decoder nonnegative matrix factorization with 
+β-divergence for data clustering</a>
 <br /> S. Soleymanbaigi, <b>A. Seyedi</b>, F. Akhlaghian, and F. Daneshfar, Pattern Recognition 2026.</p>
 </li>
 <li><p><a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust Nonnegative Matrix Factorization</a>
@@ -147,3 +148,4 @@
 
 </body>
 </html>
+
