--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 <ul>
 <li><p>I will attend the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/scientific-machine-learning-and-numerical-methods-autumn-school/">Autumn School: Scientific Machine Learning and Numerical Methods</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, October 27-31, 2025.</p>
 </li>
-<li><p><b>I am on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</b></p>
-</li>
-<li><p>I will attend the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.</p>
-</li>
 </ul>
 <h3>Recent news</h3>
 <ul>
+<li><p>I was on the organizing committee of the <a href="https://sites.google.com/view/lrma25">third workshop on Low-Rank Models and Applications (LRMA 25)</a>, Mons, September 11-12, 2025.</p>
+</li>
+<li><p>I attended the &ldquo;<a href="https://www.cwi.nl/en/events/cwi-research-semester-programmes/phd-school-machine-learning-and-optimization/">PhD School: Machine Learning and Optimization</a>&rdquo;, at the Centrum Wiskunde &amp; Informatica (CWI), Netherlands, September 2-4, 2025.</p>
+</li>
 <li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.112211">Encoder-Decoder NMF with β-Divergence</a>, has been accepted for publication in Pattern Recognition journal 2026.</p>
 </li>
 <li><p>Our paper, <a href="https://doi.org/10.1016/j.patcog.2025.111732">Instance-wise Distributionally Robust NMF</a>, has been accepted for publication in Pattern Recognition journal 2026. It's my first collaboration with Prof. Nicolas Gillis.</p>
@@ -118,5 +118,6 @@ Email: seyedamjad [DOT] seyedi [AT] umons [DOT] ac [DOT] be <br />
 
 </body>
 </html>
+
 
 
